### Added
- Philosopehr protein inference

### Changed

### Fixed
- Generic FASTA parser is now checking the decoiy sttus of all entries.

 
## Snapcraft
- `snap install philosopher`